5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3465/executions/1756_1183.log
== TEST (2019-05-29 02:37:05) 
-- CODE:
v1 = array(eval(input("")))
copia = array([0]*5)
while
-- ERROR:
File "XXXX", line 3
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:37:13) 
-- CODE:
v1 = array(eval(input("")))
copia = array([0]*5)
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:38:49) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
copia = array([0]*5)
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:39:09) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
copia = array([5])
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:39:48) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
copia = array([0]*5)
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:44:20) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
while i>=0:
	if(v[i]<0):
		copia[cont-1] = v[i]
	i-=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:44:34) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
while i>=0:
	if(v1[i]<0):
		copia[cont-1] = v[i]
	i-=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:44:39) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
while i>=0:
	if(v1[i]<0):
		copia[cont-1] = v1[i]
	i-=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:44:53) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
while i>=0:
	if(v1[i]<0):
		copia[cont-1] = v1[i]
	i-=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:45:24) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)

while i>0:
	if(v1[i-1]<0):
		copia[cont-1] = v1[i]
	i-=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:46:21) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
i = 0
j =0
while i<len(v1):
	if(v1[i]<0):
		copia[j] = v1[i]
		j+=1
	i+=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:46:40) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]<0):
		cont+=1
	i+=1
copia = array([0]*cont)
i = 0
j =0
while i<len(v1):
	if(v1[i]>0):
		copia[j] = v1[i]
		j+=1
	i+=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:47:07) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]>0):
		cont+=1
	i+=1
copia = array([0]*cont)
i = 0
j =0
while i<len(v1):
	if(v1[i]>0):
		copia[j] = v1[i]
		j+=1
	i+=1
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 02:47:16) 
-- CODE:
from numpy import *
v1 = array(eval(input("")))
cont = 0
i = 0
while(i<len(v1)):
	if(v1[i]>0):
		cont+=1
	i+=1
copia = array([0]*cont)
i = 0
j =0
while i<len(v1):
	if(v1[i]>0):
		copia[j] = v1[i]
		j+=1
	i+=1
print(copia)
-- EXECUTION TIME:
0.48987
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
